ci: update build config
- add copy `ServiceWorker.Framework` in build phase
- add some debug level log

--- a/SWWebView/js-src/tests/tests.html
+++ b/SWWebView/js-src/tests/tests.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <h2>SWWebView Test HTML</h2>
     <button style="position: fixed; bottom: 0;left:0;" onclick="window.location.reload()">Reload</button>
     <img src="//preview.ibb.co/fm6g30/Screen-Shot-2018-10-11-at-2-57-41-PM-2.png" alt="Try protocol-relative cross domain URL" height="42" width="42">
     <div id="mocha"></div>
