--- a/SWWebView/js-src/tests/tests.html
+++ b/SWWebView/js-src/tests/tests.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="mocha.css" type="text/css" rel="stylesheet" />
+    <meta name="referrer" content="origin">
 </head>
 
 <body>
